AppDbContax scaffold migration, Student CRUD opration feature

--- a/StudentApi/appsettings.json
+++ b/StudentApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-LBKAUNP;Database=StudentAPI;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
